2007-06-24  Joel Holdsworth  <joelholdsworth@yahoo.com>
    
    * modified the windows RC files to add version info and manifest data

2007-03-16  Tim Dwyer  <Tim.Dwyer@infotech.monash.edu.au>

	* src/graphlayout/graphlayout.cpp: handle null bounding boxes

2007-03-01  Markus Schwarzenberg <Markus.Schwarzenberg@ipms.fraunhofer.de>

  Solaris 8 / gcc-3.2.3 fixes (selectively effecting only this special

  * src/display/nr-filter-gaussian.cpp:
    
    * include compatibility header "isnormal.h"
    * template calcTriggsSdikaInitialization<PC> needs to be
      specified explicitely for gcc 3.2.3
  
  * src/display/pixblock-transform.cpp, src/display/nr-filter.cpp, 
    src/display/nr-filter.cpp
    
    * include compatibility header "round.h"
    * using Inkscape::round
    
  * src/extension/internal/ps.cpp, src/print.cpp
   
    include <unistd.h> on SOLARIS_2_8 for open, unlink
    
  * src/libcola/gradient_projection.cpp
  
    include and use compatibility headers "isnan.h" "isinf.h"
    
  * removed obsolete src/libvpsc/isnan.h
  
  * added src/isinf.h
  
  * configure.ac: Added Detection of solaris2.8 --> CXXFLAGS += -DSOLARIS_2_8

2006-08-05  John Bintz  <jcoswell@coswellproductions.org>

  * node-context.cpp, nodepath.cpp:

    add checks to make sure given nodepath pointers are not 
    null before working with them

2006-08-01  MenTaLguY  <mental@rydia.net>

	* configure.ac: refactor pkg-config tests and add explicit cairo test

2006-07-29  John Bintz  <jcoswell@coswellproductions.org>

  * src/nodepath.cpp:
  
    Fix bug where deleting a node broke the symmetry of neighboring
    smooth nodes and failed to convert those nodes to cusp nodes

2006-07-29  MenTaLguY  <mental@rydia.net>

	* src/sp-object.cpp:

	  remove GObject signals from SPObject

	* src/desktop.cpp, src/desktop.h, src/sp-gradient.cpp,
	  src/sp-gradient.h, src/sp-pattern.cpp, src/sp-pattern.h,
	  src/sp-switch.cpp, src/sp-switch.h, src/widgets/desktop-widget.cpp,